--- a/simple_bof/source/Makefile
+++ b/simple_bof/source/Makefile
@@ -1,7 +1,7 @@
 obj-m += simple_bof.o
- 
+
 all:
-	make -C /tmp/linux-4.19.80 M=/home/bc/probs/my_kernel_challs/simple_bof/source modules
+	make -C $(KERNEL) M=$(PWD) modules
  
 clean:
-	make -C /tmp/linux-4.19.80 M=/home/bc/probs/my_kernel_challs/simple_bof/source clean
+	make -C $(KERNEL) M=$(PWD) clean
