--- a/simple_bof/.gitignore
+++ b/simple_bof/.gitignore
@@ -1,3 +1,4 @@
+## Kernel module compile temporaries
 .tmp_versions
 *.tmp
 *.cmd
@@ -5,4 +6,16 @@
 *.o
 *.symvers
 *.order
+
+## Debug folder
 vm/debug
+
+## gdb debuging history
+.gdb_history
+
+## ida reversing datas
+.id0
+.id1
+.id2
+.nam
+.til
